Various improvements, implemented buffer fill command
Image data checks channels
Implemented buffer fill command
Added alignment helper
More doc for cosine usage